# rice-classification

./: .gcloudignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  config.yaml  data.dvc  locustfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  tasks.py  vertex_ai_train.yaml
.dvc/: config
.github/workflows/: codecheck.yaml  docker-build.yml  tests.yaml
configs/: data.yaml  evaluate.yaml  train.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/rice_classification/: api.py  data.py  evaluate.py  ml_app.py  model.py  prediction_monitoring.py  test.py  train.py  visualize.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20250116_105112-3b1ih1d6/: run-3b1ih1d6.wandb
wandb/run-20250116_105401-i1fionh7/: run-i1fionh7.wandb
wandb/run-20250116_105528-qdp2n2yn/: run-qdp2n2yn.wandb
wandb/run-20250116_105656-wuh4t54s/: run-wuh4t54s.wandb
wandb/run-20250116_105734-lq7ivc0h/: run-lq7ivc0h.wandb
wandb/run-20250116_110842-odwzc5k9/: run-odwzc5k9.wandb
wandb/run-20250116_112943-c4bu9q29/: run-c4bu9q29.wandb
wandb/run-20250116_114030-03fmynd5/: run-03fmynd5.wandb
wandb/run-20250120_101912-f3neutnl/: run-f3neutnl.wandb
wandb/run-20250120_102534-2uk8xsuv/: run-2uk8xsuv.wandb
wandb/run-20250120_122425-wi4p451p/: run-wi4p451p.wandb
wandb/run-20250120_122614-afocpgyp/: run-afocpgyp.wandb
wandb/run-20250120_122628-7kovmmoe/: run-7kovmmoe.wandb
wandb/run-20250120_122646-qxdzbyi5/: run-qxdzbyi5.wandb
(+92 files in other folders)
