[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_classification"
version = "0.0.1"
description = "small project on image classification on rice related to the mlops course on dtu."
authors = [
  { name = "group_27", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "rice_classification.train:main"
evaluate = "rice_classification.evaluate:main"